--- a/all-in-one-deploy/host-routing/main.yml
+++ b/all-in-one-deploy/host-routing/main.yml
@@ -1,9 +1,23 @@
 - name: Host routing setup
-  vars_files: vars.yml
+  vars_files:
+    - vars.yml
+    - ../vars/global-vars.yml
   hosts: localhost
   remote_user: root
   connection: local
   tasks:
+    - name: Config network interface
+      become: true
+      ansible.builtin.replace:
+        path: setup-brs.sh
+        regexp: 'NET_IF = eth0'
+        replace: 'NET_IF = {{ network_interface }}'
+    - name: Config Neutron external bridge interface
+      become: true
+      ansible.builtin.replace:
+        path: setup-brs.sh
+        regexp: 'NEUTRON_EXT_BRIDGE_IF = br-ex'
+        replace: 'NEUTRON_EXT_BRIDGE_IF = {{ neutron_external_bridge }}'
     - name: Copy setup-brs.sh
       become: true
       ansible.builtin.copy:
