--- a/all-in-one-deploy/external-ceph/ceph_nova.yml
+++ b/all-in-one-deploy/external-ceph/ceph_nova.yml
@@ -31,7 +31,7 @@
       changed_when: output.rc == 0
     - name: Copy Ceph Nova keyring
       ansible.builtin.copy:
-        src: {{ cinder_volume_keyring_path }}
+        src: '{{ cinder_volume_keyring_path }}'
         dest: /etc/kolla/config/nova/ceph.client.cinder.keyring
         mode: '0600'
     - name: Copy Ceph config
