--- a/openstack-infra/flavor/configure-vm-flavors.yml
+++ b/openstack-infra/flavor/configure-vm-flavors.yml
@@ -15,3 +15,19 @@
         ram: 512
         vcpus: 1
         disk: 5
+    - name: Create Talos controller node flavor
+      openstack.cloud.compute_flavor:
+        state: present
+        name: talos.controller
+        vcpus: 4
+        ram: 4096
+        disk: 20
+        ephemeral: 80
+    - name: Create Talos worker node flavor
+      openstack.cloud.compute_flavor:
+        state: present
+        name: talos.worker
+        vcpus: 2
+        ram: 2048
+        disk: 20
+        ephemeral: 80
