--- a/openstack-infra/k8s-deploy/load-balancer.yml
+++ b/openstack-infra/k8s-deploy/load-balancer.yml
@@ -7,6 +7,9 @@
         name: talos-control-plane
         vip_subnet: public1-subnet
       register: talos_ctrl_plane_info
+    - name: a
+      ansible.builtin.debug:
+        msg: '{{ talos_ctrl_plane_info }}'
     - name: Create loadbalancer listener
       openstack.cloud.lb_listener:
         state: present
@@ -32,12 +35,12 @@
         pool: talos-control-plane-pool
 
     - name: Cluster configuration generation 1.0
-      ansible.builtin.command: 'mkdir /root/talos-k8s-openstack'
+      ansible.builtin.command: 'mkdir -p /root/talos-k8s-openstack'
       register: output
       changed_when: output.rc == 0
     - name: Cluster configuration generation 1.1
       ansible.builtin.command: 'talosctl gen config \
-       talos-k8s-openstack https://{{ talos_ctrl_plane_info.vip_address }}:6443 \
+       talos-k8s-openstack https://{{ talos_ctrl_plane_info.load_balancer.vip_address }}:6443 \
        --output /root/talos-k8s-openstack'
       register: output
       changed_when: output.rc == 0
