--- a/k8s-infra/forgejo/values.yaml
+++ b/k8s-infra/forgejo/values.yaml
@@ -114,11 +114,11 @@ service:
   ## @param service.http.loadBalancerClass Loadbalancer class
   ## @param service.http.extraPorts Additional ports
   http:
-    type: ClusterIP
+    type: NodePort
     port: 3000
     clusterIP:
     loadBalancerIP:
-    nodePort:
+    nodePort: 33000
     externalTrafficPolicy:
     externalIPs:
     ipFamilyPolicy:
@@ -143,10 +143,10 @@ service:
   ## @param service.ssh.labels SSH service additional labels
   ## @param service.ssh.loadBalancerClass Loadbalancer class
   ssh:
-    type: ClusterIP
+    type: NodePort
     port: 22
     clusterIP:
-    loadBalancerIP:
+    loadBalancerIP: 33022
     nodePort:
     externalTrafficPolicy:
     externalIPs:
@@ -531,7 +531,12 @@ gitea:
       SSH_LISTEN_PORT: 2222 # rootless image
 
     ## @param gitea.config.database Database configuration (only necessary with an [externally managed DB](#external-database)).
-    database: {}
+    database:
+      DB_TYPE: postgres # supported values are mysql, postgres, mssql, sqlite3
+      HOST: forgejo-db-cluster-rw
+      NAME: forgejo-db
+      USER: forgejo
+      PASSWD: forgejo
 
     ## @param gitea.config.indexer Settings for what content is indexed and how
     indexer: {}
