--- a/prod/harbor/values.yaml
+++ b/prod/harbor/values.yaml
@@ -1,14 +1,14 @@
 expose:
   # Set how to expose the service. Set the type as "ingress", "clusterIP", "nodePort" or "loadBalancer"
   # and fill the information in the corresponding section
-  type: ingress
+  type: nodePort
   tls:
     # Enable TLS or not.
     # Delete the "ssl-redirect" annotations in "expose.ingress.annotations" when TLS is disabled and "expose.type" is "ingress"
     # Note: if the "expose.type" is "ingress" and TLS is disabled,
     # the port must be included in the command when pulling/pushing images.
     # Refer to https://github.com/goharbor/harbor/issues/5291 for details.
-    enabled: true
+    enabled: false
     # The source of the tls certificate. Set as "auto", "secret"
     # or "none" and fill the information in the corresponding section
     # 1) auto: generate the tls certificate automatically
@@ -16,7 +16,7 @@ expose:
     # The tls certificate can be generated manually or by cert manager
     # 3) none: configure no tls certificate for the ingress. If the default
     # tls certificate is configured in the ingress controller, choose this option
-    certSource: auto
+    certSource: none
     auto:
       # The common name used to generate the certificate, it's necessary
       # when the type isn't "ingress"
@@ -81,12 +81,12 @@ expose:
         # The service port Harbor listens on when serving HTTP
         port: 80
         # The node port Harbor listens on when serving HTTP
-        nodePort: 30002
+        nodePort: 30200
       https:
         # The service port Harbor listens on when serving HTTPS
         port: 443
         # The node port Harbor listens on when serving HTTPS
-        nodePort: 30003
+        nodePort: 30201
     # Annotations on the nodePort service
     annotations: {}
     # nodePort-specific labels
@@ -147,7 +147,7 @@ persistence:
       storageClass: ""
       subPath: ""
       accessMode: ReadWriteOnce
-      size: 5Gi
+      size: 40Gi
       annotations: {}
     jobservice:
       jobLog:
@@ -155,7 +155,7 @@ persistence:
         storageClass: ""
         subPath: ""
         accessMode: ReadWriteOnce
-        size: 1Gi
+        size: 3Gi
         annotations: {}
     # If external database is used, the following settings for database will
     # be ignored
@@ -180,7 +180,7 @@ persistence:
       storageClass: ""
       subPath: ""
       accessMode: ReadWriteOnce
-      size: 5Gi
+      size: 7Gi
       annotations: {}
   # Define which storage backend is used for registry to store
   # images and charts. Refer to
@@ -912,7 +912,7 @@ trivy:
 database:
   # if external database is used, set "type" to "external"
   # and fill the connection information in "external" section
-  type: internal
+  type: external
   internal:
     image:
       repository: goharbor/harbor-db
@@ -962,11 +962,11 @@ database:
       #    memory: 128Mi
       #    cpu: 100m
   external:
-    host: "192.168.0.1"
+    host: "harbor-db-cluster-rw"
     port: "5432"
-    username: "user"
-    password: "password"
-    coreDatabase: "registry"
+    username: "harbor"
+    password: "harbor"
+    coreDatabase: "harbor-db"
     # if using existing secret, the key must be "password"
     existingSecret: ""
     # "disable" - No SSL
