--- a/all-in-one-deploy/playbook.yml
+++ b/all-in-one-deploy/playbook.yml
@@ -42,6 +42,9 @@
 - name: Enable Octavia
   ansible.builtin.import_playbook: octavia/main.yml
 
+- name: Enable Barbican
+  ansible.builtin.import_playbook: barbican/main.yml
+
 - name: External Ceph Backend
   ansible.builtin.import_playbook: external-ceph/main.yml
 
